--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/DeleteUsuarioCliente.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/DeleteUsuarioCliente.razor
@@ -17,6 +17,7 @@
 <p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
 <p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
 <p>Mode <strong>@ContextProvider.ConnectionMode</strong>:</p>
+<p>Token <strong>@ContextProvider.Token</strong>:</p>
 @if (@ContextProvider.ConnectionMode != "Ef")
 {
     <p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
@@ -108,6 +109,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        await ContextProvider.ReadContext();
         sUsuarioCliente = new ServicioUsuariosCliente(ContextProvider, UowFactory);
         await CargarAsync();
         StateHasChanged();
