--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/ListaUsuariosCliente.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/ListaUsuariosCliente.razor
@@ -24,6 +24,7 @@ else
     <p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
     <p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
     <p>Mode <strong>@ContextProvider.ConnectionMode</strong>:</p>
+    <p>Token <strong>@ContextProvider.Token</strong>:</p>
     @if (@ContextProvider.ConnectionMode != "Ef")
     {
         <p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
