--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
@@ -2,16 +2,16 @@
 @using DataBase.Genericos
 @inject IContextProvider ContextProvider
 
-<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid" />
-    <select class="form-select" @bind="TenantId">
+<div class="top-row navbar navbar-dark w-25">
+
+    <select class="form-select" style="min-width: 200px;" @bind="TenantId">
 
         @foreach (var opcion in ContextProvider.GetTenantIds())
         {
             <option value="@opcion">@opcion</option>
         }
     </select>
-    <select class="form-select" @bind="ContextKey">
+    <select class="form-select" style="min-width: 200px;" @bind="ContextKey">
 
         @foreach (var opcion in ContextProvider.GetContextKeyDbs())
         {
@@ -19,7 +19,7 @@
         }
     </select>
 
-    <select class="form-select" @bind="Mode">
+    <select class="form-select" style="min-width: 200px;" @bind="Mode">
 
         @foreach (var opcion in ContextProvider.GetConnectionModes())
         {
@@ -28,7 +28,7 @@
     </select>
     @if (Mode!="Ef")
     {
-    <select class="form-select" @bind="ApiName">
+        <select class="form-select" style="min-width: 200px;" @bind="ApiName">
 
         @foreach (var opcion in ContextProvider.GetApiNames())
         {
@@ -76,10 +76,38 @@
     private bool IsServer => !OperatingSystem.IsBrowser();
 
 
+    protected async override Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+            await CargarAsync();
+    }
+
+    private async Task CargarAsync()
+    {
+        try
+        {
+            await ContextProvider.ReadContext();
+            TenantId = ContextProvider?.TenantId ?? 0;
+            ContextKey = ContextProvider?.DbKey ?? "SqLite";
+            ApiName = ContextProvider?.ApiName ?? "ApiRest";
+            Mode = ContextProvider?.ConnectionMode ?? "Ef";
+
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine("EX: " + ex.GetType().FullName);
+            Console.WriteLine(ex.ToString());
+            Console.WriteLine("INNER: " + ex.InnerException?.GetType().FullName);
+            Console.WriteLine(ex.InnerException?.ToString());
+            throw;
+        }
+    }
+
     private async Task Actualizar()
     {
-        ContextProvider.SetContext(TenantId,ContextKey,ApiName,ContextProvider.DirBase,Mode);
-        ContextProvider.SaveContext(TenantId, ContextKey, ApiName, ContextProvider.DirBase, Mode);
+        var Token = ContextProvider.Token;
+        ContextProvider.SetContext(TenantId,ContextKey,ApiName,ContextProvider.DirBase,Mode,Token);
+        ContextProvider.SaveContext(TenantId, ContextKey, ApiName, ContextProvider.DirBase, Mode, Token);
 
     }
 
