--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Routes.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Routes.razor
@@ -1,6 +1,22 @@
-﻿<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
-    <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="routeData" Selector="h1" />
-    </Found>
-</Router>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using BlazorAppEFTenant.Client
+
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(Program).Assembly"
+            AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
+
+        <Found Context="routeData">
+            <RouteView RouteData="routeData"
+                       DefaultLayout="@typeof(Layout.MainLayout)" />
+            <FocusOnNavigate RouteData="routeData" Selector="h1" />
+        </Found>
+
+        <NotFound>
+            <LayoutView Layout="@typeof(Layout.MainLayout)">
+                <p>Page not found</p>
+            </LayoutView>
+        </NotFound>
+
+    </Router>
+</CascadingAuthenticationState>
+
