--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/DeleteUsuarioCliente.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/DeleteUsuarioCliente.razor
@@ -103,16 +103,18 @@
 
     bool displayValidationErrorMessages = false;
     bool displayUserAddedToDB = false;
+    Seguridad seguridad;
 
 
-
-
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        await ContextProvider.ReadContext();
-        sUsuarioCliente = new ServicioUsuariosCliente(ContextProvider, UowFactory);
-        await CargarAsync();
-        StateHasChanged();
+        if (firstRender)
+        {
+            await ContextProvider.ReadContext();
+            seguridad = ServicioSeguridad.GetDataFromToken(ContextProvider.Token);
+            await CargarAsync();
+            StateHasChanged();
+        }
     }
 
     private async Task HandleValidSubmit(EditContext context)
