--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/MainLayout.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,10 @@
-﻿@inherits LayoutComponentBase
+﻿@using DataBase
+@using DataBase.Genericos
+@using DataBase.Servicios
+@using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
+@inject IContextProvider ContextProvider
+@inject ITokenService TokenService
 
 <div class="page">
     <div class="sidebar">
@@ -7,7 +13,16 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <MyAuthorizeView>
+    <Authorized>
+           <button class="btn btn-link" @onclick="Logout">Logout</button>
+    </Authorized>
+
+    <NotAuthorized>
+        <!-- Usuario NO logeado: mostrar Login/Register -->
+        <a href=Login>Login</a>        
+    </NotAuthorized>
+</MyAuthorizeView>
         </div>
 
         <article class="content px-4">
@@ -21,3 +36,12 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+@code {
+    [Inject] NavigationManager Nav { get; set; } = default!;
+
+    private void Logout()
+    {
+        ContextProvider.SaveContext(null, null, null, null, null, null);
+        Nav.NavigateTo("/Home", forceLoad: true);
+    }
+}
