--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DeleteUsuario.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DeleteUsuario.razor
@@ -90,6 +90,7 @@
     public int Id { get; set; }
 
     private Usuario NewUser = new Usuario();
+    Seguridad seguridad;
 
     bool displayValidationErrorMessages = false;
     bool displayUserAddedToDB = false;
@@ -99,8 +100,18 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await CargarAsync();
-        StateHasChanged();
+
+    }
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await ContextProvider.ReadContext();
+            seguridad = ServicioSeguridad.GetDataFromToken(ContextProvider.Token);
+            await CargarAsync();
+            StateHasChanged();
+        }
+
     }
 
     private async Task HandleValidSubmit(EditContext context)
