--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleTenant.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleTenant.razor
@@ -68,7 +68,7 @@ else
 @code {
     public List<Usuario>? usuarios { get; set; } = new List<Usuario>();
 
-    private Func<Task>? _onContextChangedHandler;
+    private Action? _onContextChangedHandler;
 
     protected override async Task OnInitializedAsync()
     {
@@ -102,7 +102,7 @@ else
                 usuarios.AddRange(list);
 
             }
-  
+            StateHasChanged();
         }
         catch (Exception ex)
         {
