todo funciona perfectamente si se renderize en el servidor solo  ..

--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
-﻿@rendermode InteractiveServer
+﻿
 @using DataBase.Genericos
 @inject IContextProvider ContextProvider
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 <div class="top-row navbar navbar-dark w-25">
 
