--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/MyAuthorizeView.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/MyAuthorizeView.razor
@@ -2,7 +2,8 @@
 @using DataBase.Genericos
 @using DataBase.Servicios
 @inject IContextProvider ContextProvider
-@inject ITokenService TokenService
+
+@inject IConfiguration Configuration
 
 
 @if (_initialized && _isAuthorized)
@@ -56,7 +57,7 @@ else
     {
         var token = ContextProvider.Token;
 
-        if (string.IsNullOrEmpty(token) || !TokenService.ValidateToken(token))
+        if (string.IsNullOrEmpty(token) || !TokenService.ValidateToken(token,Configuration))
         {
             _isAuthorized = false;
             return;
